2001-12-29  Stan Shebs  <shebs@apple.com>

	* objc/objc-act.c: Apply various cosmetic and formatting changes.

2001-12-29  Kazu Hirata  <kazu@hxi.com>

	* config/rs6000/darwin-tramp.asm: Fix comment formatting.
	* config/rs6000/freebsd.h: Likewise.
	* config/rs6000/rs6000.c: Likewise.
	* config/sh/sh.c: Likewise.
	* config/sh/sh.h: Likewise.

2001-12-28  Stan Shebs  <shebs@apple.com>

	* objc/objc-act.c (build_module_descriptor): Make sure the init
	function is not deferred.
	(build_dispatch_table_initializer): Compute the method encoding if
	not already done.

2001-12-28  Kazu Hirata  <kazu@hxi.com>

	* doc/md.texi: Add @findex define_insn_and_split.

2001-12-28  Hans Bohem  <hans_boehm@hp.com>

	* config/ia64/linux.h (MD_FALLBACK_FRAME_STATE_FOR): New.
	* config/ia64/unwind-ia64.c (uw_init_context_1): Redo sp, psp,
	bsp setup.  Set pri_unat_loc to something reasonable.
	(uw_install_context): Add missing cast.
	(unw_access_gr): Fix off-by-1 indexing error.

2001-12-28  Kazu Hirata  <kazu@hxi.com>

	* except.c: Fix comment formatting.
	* flags.h: Likewise.
	* flow.c: Likewise.
	* predict.c: Likewise.
	* simplify-rtx.c: Likewise.
	* system.h: Likewise.
	* vmsdbg.h: Likewise.
	* vmsdbgout.c: Likewise.

2001-12-28  Kazu Hirata  <kazu@hxi.com>

	* config/h8300/h8300.md: Fix formatting.

2001-12-28  Geoff Keating  <geoffk@redhat.com>

	* varasm.c (record_constant_1): Correct parameter to recursive
	call in default case.

2001-12-28  Jakub Jelinek  <jakub@redhat.com>

	* config/sparc/sparc.h (ASM_PREFERRED_EH_DATA_FORMAT,
	ASM_OUTPUT_DWARF_PCREL): Define.
	* config/sparc/sol2.h (ASM_PREFERRED_EH_DATA_FORMAT): Define.
	* configure.in (HAVE_AS_SPARC_UA_PCREL): Check whether as supports
	.uaword %r_disp32() and linker handles it correctly.
	* configure, config.in: Rebuilt.

2001-12-28  Jakub Jelinek  <jakub@redhat.com>

	* c-typeck.c (store_init_value): If initializing object with array
	type of unknown size by a compound literal, set object's size from