@@ -1,5 +1,10 @@
 2001-12-29  Stan Shebs  <shebs@apple.com>
 
+	* objc/objc-act.c (STRING_OBJECT_CLASS_NAME): Remove.
+	(default_constant_string_class_name): New global.
+	(objc_init): Set it.
+	(synth_module_prologue): Use it.
+
 	* objc/objc-act.c: Apply various cosmetic and formatting changes.
 
 2001-12-29  Kazu Hirata  <kazu@hxi.com>
